--- a/src/mkt/CMakeLists.txt
+++ b/src/mkt/CMakeLists.txt
@@ -67,4 +67,5 @@ if(WIN32)
   file(TO_NATIVE_PATH ${Boost_LIBRARY_DIRS} BOOST_LOCATION)
   file(TO_NATIVE_PATH ${CMAKE_BINARY_DIR} BINARIES_LOCATION)
   configure_file( trans-mkt.bat.cmake ${CMAKE_BINARY_DIR}/trans-mkt.bat )
+  configure_file( vs2012.bat.cmake ${CMAKE_BINARY_DIR}/vs2012.bat )
 endif(WIN32)
