--- a/src/editline_win/CMakeLists.txt
+++ b/src/editline_win/CMakeLists.txt
@@ -4,10 +4,10 @@ set (WinEditLine_VERSION_MAJOR 2)
 set (WinEditLine_VERSION_MINOR 1)
 
 set(INCLUDE_FILES              
-  ../../inc/editline/readline.h
+  ../../inc/editline_win/readline.h
   el_globals.h
   histedit.h
-  ${CMAKE_BINARY_DIR}/src/editline/config.h
+  ${CMAKE_BINARY_DIR}/src/editline_win/config.h
 )
 
 set(SOURCE_FILES
@@ -21,7 +21,7 @@ source_group("Include Files" FILES ${INCLUDE_FILES})
 
 include_directories(
   ../../inc
-  ${CMAKE_BINARY_DIR}/src/editline
+  ${CMAKE_BINARY_DIR}/src/editline_win
   .
 )
 
@@ -29,5 +29,5 @@ add_library(editline ${SOURCE_FILES} ${INCLUDE_FILES})
 
 configure_file (
   config.h.in
-  ${CMAKE_BINARY_DIR}/src/editline/config.h
+  ${CMAKE_BINARY_DIR}/src/editline_win/config.h
 )
