Adding module entry point function and using ret_val for submodule asset commands.

--- a/src/xch/CMakeLists.txt
+++ b/src/xch/CMakeLists.txt
@@ -7,11 +7,13 @@ endif(WIN32)
 set(INCLUDE_FILES
   ../../inc/xch/accounts.h
   ../../inc/xch/assets.h
+  ../../inc/xch/xch.h
 )
 
 set(SOURCE_FILES
   accounts.cpp
   assets.cpp
+  xch.cpp
 )
 
 source_group("Source Files" FILES ${SOURCE_FILES})
@@ -25,12 +27,12 @@ include_directories(
 
 set(XCH_LINK_LIBS "")
 
-add_library(xch ${SOURCE_FILES} ${INCLUDE_FILES})
+add_library(xch MODULE ${SOURCE_FILES} ${INCLUDE_FILES})
 
 SetupBoost(xch)
 
 target_link_libraries(xch ${MKT_LINK_LIBS})
 
-add_executable(trans-xch orderbook.cpp)
-target_link_libraries(trans-xch xch mkt)
+#add_executable(trans-xch orderbook.cpp)
+#target_link_libraries(trans-xch xch mkt)
 
